<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="192dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:contentDescription="@string/sss"
        android:src="@drawable/stud" />

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_marginTop="15dp"
        android:onClick = "ButtonOnClick"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/takephoto" />

    <Button
        android:id="@+id/btnViewPhoto"
        android:onClick = "ButtonOnClick"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/viewphoto" />

</LinearLayout>